bmt-webview/bmt-webview_v1_Service_webview.yaml
apiVersion: v1
kind: Service
metadata:
  name: webview
  namespace: bmt-webview
spec:
  ports:
  - port: 80
    targetPort: 3100
  selector:
    app: webview
